added more security in github code

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
     <title>Clothy - Question and Answers Microservice</title>
+    <style media="all">
+      html,
+      body {
+        height: 100%;
+      }
+      #root {
+        min-height: 100%;
+      }
+      * html #root {
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
